<resources>
    <string name="app_name">Практическая работа №7</string>
    <string name="welcomeText">Вас приветствует система быстрого анкетирования</string>
    <string name="beginButton">Начать</string>
    <string name="topic">Тема - Смартфоны</string>
    <string name="exit">Выход</string>
    <string name="exit_desc">Выйти из приложения?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="question1">Какой у вас смартфон?</string>
    <string name="question2">Какой у вас оператор?</string>
    <string name="question3">Какое у вас образование:</string>
    <string name="манная">IPhone</string>
    <string name="рисовая">Samsung</string>
    <string name="гороховая">Huawei</string>
    <string name="гречневая">Xiaomi</string>
    <string name="Отлично">Tele2</string>
    <string name="Хорошо">Beeline</string>
    <string name="Удовлетворительно">Kcell</string>
    <string name="Неудовлетворительно">Altel</string>
    <string name="назад">Назад</string>
    <string name="далее">Далее</string>
    <string name="спасибо">Спасибо что воспользовались нашей системой!</string>
    <string name="заново">Заново</string>
</resources>
